feat: Update HTML structure and metadata for improved SEO and user experience

--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="fr">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml" sizes="32x32" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='15' fill='%235dbdc1'/%3E%3Ctext x='50' y='50' font-family='Arial,sans-serif' font-size='48' font-weight='bold' fill='%231a1d29' text-anchor='middle' dominant-baseline='central'%3EJT%3C/text%3E%3C/svg%3E">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />    
-    <title>Portfolio JulieTolve</title>
+    <title>Julie Tolve | Développeuse Web Freelance - Vue.js & Python</title>
+
+    <meta name="description" content="Portfolio de Julie Tolve, développeuse web spécialisée en Vue.js et Python. Découvrez mes projets et compétences en développement d'applications web.">
+    <meta name="author" content="Julie Tolve">
+    <meta name="robots" content="index, follow">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://julie-tolve-portfolio.netlify.app/">
+    <meta property="og:title" content="Julie Tolve - Développeuse Web et Applications">
+    <meta property="og:description" content="Portfolio professionnel de Julie Tolve - Projets en Vue.js, Python et développement web moderne.">
+    <meta property="og:image" content="https://julie-tolve-portfolio.netlify.app/favicon.ico">
+    <meta property="og:locale" content="fr_FR">
+
+    <style>
+      #app:empty::before {
+        content: "Chargement du portfolio...";
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        font-size: 18px;
+        color: #64ffda;
+        font-family: system-ui, -apple-system, sans-serif;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
