--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <meta name="robots" content="index, follow">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://julie-tolve-portfolio.netlify.app/">
+    <meta property="og:url" content="https://julietolve.com/">
     <meta property="og:title" content="Julie Tolve - Développeuse Web et Applications">
     <meta property="og:description" content="Portfolio professionnel de Julie Tolve - Projets en Vue.js, Python et développement web moderne.">
-    <meta property="og:image" content="https://julie-tolve-portfolio.netlify.app/favicon.ico">
+    <meta property="og:image" content="https://julietolve.com/favicon.ico">
     <meta property="og:locale" content="fr_FR">
 
     <style>
