fix: Update Open Graph image URL for better social media sharing

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://julietolve.com/">
     <meta property="og:title" content="Julie Tolve - Développeuse Web et Applications">
     <meta property="og:description" content="Portfolio professionnel de Julie Tolve - Projets en Vue.js, Python et développement web moderne.">
-    <meta property="og:image" content="https://julietolve.com/favicon.ico">
+    <meta property="og:image" content="https://julietolve.com/og-image.jpg">
     <meta property="og:locale" content="fr_FR">
 
     <style>
